syntax = "proto3";

package envoy.extensions.grpc_service.call_credentials.google_iam.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.grpc_service.call_credentials.google_iam.v3";
option java_outer_classname = "GoogleIamCredentialsProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/grpc_service/call_credentials/google_iam/v3;google_iamv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: gRPC Google IAM Credentials]

// [#not-implemented-hide:]
message GoogleIamCredentials {
  // Authorization token.
  string authorization_token = 1;

  // Authority selector.
  string authority_selector = 2;
}
